# vibecodeinfo

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.yaml  prometheus.yml  pyproject.toml  setup.cfg
.github/workflows/: main.yml
tests/: conftest.py  test_news.py
vibecodeinfo/: __main__.py  dto.py  llm_client.py  logger.py  main.py  metrics.py  news.py
vibecodeinfo/db/: crud.py  init_db.py  models.py
